fixed table spacing/buttons

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -33,6 +33,7 @@ body {
   background-color: #c2cfb2ff;
   padding: 10px;
   font-family: Arial, Helvetica, sans-serif;
+  min-width: 1350px;
 }
 
 
@@ -74,13 +75,14 @@ body {
   }
 
   th, td {
-    padding: 5px;
+    height: 35px;
     text-align: center;
   }
 
   .deleteCell {
     padding: 0px;
     border: none;
+    width: 60px;
   }
 
   tbody tr:hover {
@@ -94,6 +96,7 @@ body {
   thead {
     background-color: #172a3aff;
     color: #009fb7ff;
+    padding: 14px 16px;
   }
 
   tbody {
@@ -106,11 +109,12 @@ body {
   }
 
   .deleteButton {
-    width: 65px;
-    height: 45px;
+    width: 60px;
+    height: 36px;
     margin: 0;
     padding: 0;
     box-shadow: none;
+    border: none;
   }
 
   .deleteButton:hover {
